index listo con el sass y responsive

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -414,7 +414,7 @@
     margin-left: 140px;
 } */
 
-
+/* 
 footer {
     display: flex;
     justify-content: center;
@@ -436,7 +436,7 @@ footer {
     margin-top: -30px;
     padding-bottom: 40px;
     margin-right: 40px;
-}
+} */
 
 
 .texto-del-footer {
