--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -3,5 +3,6 @@
 @import "./partials/navegador";
 @import "./partials/banners";
 @import "./partials/tarjetas";
-
+@import "./partials/footer";
+@import "./partials/chatayuda";
 
