--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -208,42 +208,35 @@
   color: #EAEBEB;
 }
 
-.contenedor-titulo-secciones {
-  font-weight: 300;
-  padding-top: 30px;
-  margin-left: 15px;
-}
-@media (min-width: 550px) {
-  .contenedor-titulo-secciones {
-    font-weight: 400;
-    padding-top: 40px;
-  }
-}
 .contenedor-tarjetamaestra {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
-@media (min-width: 550px) {
-  .contenedor-tarjetamaestra-receta {
-    display: flex;
-    justify-content: space-between;
-  }
+.contenedor-tarjetamaestra .contenedor-titulo-secciones {
+  font-weight: 300;
+  padding-top: 30px;
+  margin-left: 15px;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetamaestra-producto {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  .contenedor-tarjetamaestra .contenedor-titulo-secciones {
+    font-weight: 400;
+    padding-top: 40px;
   }
 }
-.contenedor-tarjetamaestra-tarjeta {
+.contenedor-tarjetamaestra .contenedor-tarjeta {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
+.contenedor-tarjetamaestra .contenedor-tarjeta-producto {
+  display: block;
+}
 @media (min-width: 550px) {
-  .contenedor-tarjetamaestra-tarjeta-producto {
+  .contenedor-tarjetamaestra .contenedor-tarjeta-producto {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 16px;
     height: auto;
     max-width: 100%;
@@ -251,17 +244,18 @@
   }
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetamaestra-tarjeta-producto-imagen img {
+  .contenedor-tarjetamaestra .contenedor-tarjeta-producto-imagen img {
     width: 100%;
     height: 200px;
   }
 }
-.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra {
+
+.botonchip-compra {
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
 }
-.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra-icono {
+.botonchip-compra-icono {
   margin-top: -10px;
   padding: 0 15px;
   height: 30px;
@@ -273,23 +267,11 @@
   font-weight: 600;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
 }
-.contenedor-tarjetamaestra-tarjeta-producto .botonchip-compra-icono:hover {
+.botonchip-compra-icono:hover {
   background: #617077;
 }
-.contenedor-tarjetamaestra-tarjeta-receta {
-  margin-top: 5px;
-  margin-bottom: 50px;
-  display: block;
-}
-@media (min-width: 550px) {
-  .contenedor-tarjetamaestra-tarjeta-receta {
-    padding-left: 10px;
-    padding-right: 10px;
-    display: flex;
-    align-items: center;
-  }
-}
-.contenedor-tarjetamaestra .tarjeta-producto {
+
+.tarjeta-producto {
   padding: 12px;
   max-height: -moz-fit-content;
   max-height: fit-content;
@@ -299,14 +281,14 @@
   border-bottom: #3F525A 0.75px solid;
   padding: 30px;
 }
-.contenedor-tarjetamaestra .tarjeta-producto-imagen img {
+.tarjeta-producto-imagen img {
   height: auto;
   max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
 }
-.contenedor-tarjetamaestra .tarjeta-producto-titulo {
+.tarjeta-producto-titulo {
   padding-top: 10px;
   text-align: left;
   font-size: 20px;
@@ -314,7 +296,7 @@
   line-height: 20px;
   padding-bottom: 16px;
 }
-.contenedor-tarjetamaestra .tarjeta-producto-texto {
+.tarjeta-producto-texto {
   font-size: 12px;
   font-weight: 500;
   margin-bottom: 15px;
@@ -325,36 +307,36 @@
   text-overflow: ellipsis;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetamaestra .tarjeta-producto-texto {
+  .tarjeta-producto-texto {
     font-size: 14px;
     font-weight: 500;
     margin-top: -13px;
   }
 }
-.contenedor-tarjetamaestra .tarjeta-producto-texto-origen {
+.tarjeta-producto-texto-origen {
   font-size: 13px;
   font-weight: 600;
 }
-.contenedor-tarjetamaestra .tarjeta-producto-texto-origen-texto-origen {
+.tarjeta-producto-texto-origen-texto-origen {
   font-size: 13px;
   font-weight: 600;
 }
-.contenedor-tarjetamaestra .tarjeta-producto-texto-gramos {
+.tarjeta-producto-texto-gramos {
   font-weight: 700;
   font-size: 16px;
   color: #F06B5F;
 }
-.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra {
+.tarjeta-producto .botonchip-compra {
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra {
+  .tarjeta-producto .botonchip-compra {
     padding-top: 10px;
   }
 }
-.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra-icono {
+.tarjeta-producto .botonchip-compra-icono {
   margin-top: -10px;
   padding: 0 15px;
   height: 30px;
@@ -366,28 +348,27 @@
   font-weight: 600;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
 }
-.contenedor-tarjetamaestra .tarjeta-producto .botonchip-compra-icono:hover {
+.tarjeta-producto .botonchip-compra-icono:hover {
   background: #617077;
 }
 
 .contenedor-tarjeta-receta {
   width: 100%;
   display: block;
-  flex-direction: column;
 }
 @media (min-width: 550px) {
-  .contenedor-tarjeta-receta {  
+  .contenedor-tarjeta-receta {
     padding-left: 10px;
     padding-right: 10px;
     display: flex;
   }
 }
-.contenedor-tarjeta-receta-icono-play {
+.contenedor-tarjeta-receta .tarjeta-receta-icono-play {
   position: absolute;
-  margin-top: -1200px;
-  margin-left: 140px;
+  margin-top: 100px;
+  margin-left: 150px;
 }
-.contenedor-tarjeta-receta-imagen img {
+.contenedor-tarjeta-receta .tarjeta-receta-imagen img {
   height: auto;
   width: 100%;
   -o-object-fit: cover;
@@ -398,23 +379,23 @@
   margin-bottom: 10;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 4px 8px 0 rgba(0, 0, 0, 0.19);
 }
-.contenedor-tarjeta-receta-titulo {
+.contenedor-tarjeta-receta .tarjeta-receta-titulo {
   padding-top: 10px;
   font-weight: 600;
   font-size: 18px;
 }
-.contenedor-tarjeta-receta-dificultad {
+.contenedor-tarjeta-receta .tarjeta-receta-dificultad {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
-.contenedor-tarjeta-receta-dificultad-texto {
+.contenedor-tarjeta-receta .tarjeta-receta-dificultad-texto {
   font-size: 13px;
   font-weight: 600;
   align-items: start;
   padding-top: 4px;
 }
-.contenedor-tarjeta-receta-dificultad-imagen img {
+.contenedor-tarjeta-receta .tarjeta-receta-dificultad-imagen img {
   width: 120px;
   height: auto;
   padding-left: 8px;
@@ -428,4 +409,39 @@
   margin-bottom: 5px;
   background-color: #3F525A;
   height: 1px;
+}
+
+.contenedor-tarjeta .contenedor-titulo-secciones {
+  font-weight: 300;
+  padding-top: 30px;
+  margin-left: 15px;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjeta .contenedor-titulo-secciones {
+    font-weight: 400;
+    padding-top: 40px;
+  }
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  background-color: #2A3040;
+  position: absolute;
+}
+
+.chat-ayuda {
+  display: flex;
+  justify-content: end;
+  margin-top: 50px;
+}
+.chat-ayuda img {
+  width: 200px;
+  height: auto;
+  margin-top: -30px;
+  padding-bottom: 40px;
+  margin-right: 40px;
 }/*# sourceMappingURL=estilos.css.map */
