--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,4 +5,7 @@
 @import "./partials/tarjetas";
 @import "./partials/footer";
 @import "./partials/chatayuda";
+@import "./partials/empelo";
+@import "./partials/hisotira";
+
 
