--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -21,8 +21,8 @@
     align-items: center;
     justify-content: space-between;
     padding-left: 100px;
-    padding-top: 20px;
-    padding-bottom: -20px;
+    padding-top: 15px;
+    padding-bottom: 0px;
     padding-right: 100px;
   }
 }
@@ -326,6 +326,12 @@
   font-size: 16px;
   color: #F06B5F;
 }
+.tarjeta-producto .texto-tarjeta-precio {
+  color: #F06B5F;
+  font-weight: 700;
+  margin-top: -1px;
+  font-size: 20px;
+}
 .tarjeta-producto .botonchip-compra {
   display: flex;
   justify-content: flex-end;
@@ -444,4 +450,200 @@ footer {
   margin-top: -30px;
   padding-bottom: 40px;
   margin-right: 40px;
+}
+
+.banner-empleo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left center;
+  position: relative;
+  height: 200px;
+  width: auto;
+  background-image: url("../multimedia/img/banner-trabajo.png");
+}
+@media (min-width: 550px) {
+  .banner-empleo {
+    height: 300px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 100px;
+  }
+}
+.banner-empleo-buscar {
+  height: 300px;
+  background-color: #D9D9D9;
+  position: relative;
+  top: 240px;
+  padding: 20px 80px;
+}
+@media (min-width: 550px) {
+  .banner-empleo-buscar {
+    height: 200px;
+    background-color: #D9D9D9;
+    position: absolute;
+    top: 240px;
+    padding: 0 80px;
+  }
+}
+.banner-empleo-titulo h2 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 34px;
+}
+@media (min-width: 550px) {
+  .banner-empleo-titulo h2 {
+    padding-top: 30px;
+    padding-bottom: 40px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 55px;
+  }
+}
+@media (min-width: 550px) {
+  .banner-empleo-selector {
+    display: flex;
+  }
+}
+.banner-empleo-selector .boton-buscar {
+  width: 100%;
+  background-color: #F06B5F;
+  color: #EAEBEB;
+}
+@media (min-width: 550px) {
+  .banner-empleo-selector .boton-buscar {
+    justify-content: center;
+    display: flex;
+  }
+}
+.banner-empleo-selector .boton-buscar:hover {
+  background-color: #3F525A;
+}
+
+.contenedor-formularios {
+  margin-top: 200px;
+  display: flex;
+  align-items: center;
+}
+.contenedor-formularios-formularios {
+  border: #2A3040 solid 1px;
+  padding: 20px;
+  border-radius: 12px;
+}
+.contenedor-formularios-formularios-foto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contenedor-formularios-formularios-foto img {
+  width: 200px;
+  height: auto;
+}
+.contenedor-formularios-formularios .contenedor-formularios {
+  border: #2A3040 solid 1px;
+  padding: 20px;
+  border-radius: 12px;
+}
+.contenedor-formularios-formularios .contenedor-formularios-foto {
+  display: block;
+  width: 60px;
+  height: auto;
+  margin: 200px;
+}
+@media (min-width: 550px) {
+  .contenedor-formularios-formularios .contenedor-formularios-foto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.contenedor-formularios-formularios .contenedor-formularios-foto img {
+  width: 200px;
+  height: auto;
+}
+.contenedor-formularios-formularios .contenedor-formularios-foto .Formularios {
+  display: block;
+  width: 300px;
+  margin-left: -326px;
+  position: relative;
+}
+@media (min-width: 550px) {
+  .contenedor-formularios-formularios .contenedor-formularios-foto .Formularios {
+    display: flex;
+    width: auto;
+    margin: 0;
+  }
+}
+.contenedor-formularios-formularios .contenedor-formularios-foto .Formularios-lista {
+  display: block;
+  flex-direction: column;
+}
+
+@media (min-width: 550px) {
+  .nos-encanta {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+}
+.nos-encanta .titulo-trabajo {
+  font-weight: 700;
+  font-size: 31px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+@media (min-width: 550px) {
+  .nos-encanta .titulo-trabajo {
+    font-weight: 700;
+    font-size: 50px;
+    margin-right: 50px;
+  }
+}
+.nos-encanta .texto-trabajo {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 50px;
+}
+@media (min-width: 550px) {
+  .nos-encanta .texto-trabajo {
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+.contenedor-botones-formulario {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 100px;
+}
+.contenedor-botones-formulario-botones-formularios {
+  display: flex;
+  justify-content: center;
+}
+.contenedor-botones-formulario-botones-formularios .btn-boton-subir {
+  background-color: #2A3040;
+  color: #EAEBEB;
+}
+.contenedor-botones-formulario-botones-formularios .btn-boton-enviar {
+  background-color: #2A3040;
+  color: #EAEBEB;
+}
+.contenedor-botones-formulario .formularios {
+  display: block;
+  justify-content: center;
+  width: auto;
+  height: 200px;
+}
+
+.linea-horizontal-formularios {
+  margin-top: 30px;
+  background-color: #2A3040;
 }/*# sourceMappingURL=estilos.css.map */
