--- a/scss/partials/_tarjetas.scss
+++ b/scss/partials/_tarjetas.scss
@@ -159,6 +159,21 @@
             }
         }
 
+        .estrellas {
+            // margin-left: -5px;
+        }
+
+        .texto {
+            &-tarjeta {
+                &-precio {
+                    color: #F06B5F;
+                    font-weight: 700;
+                    margin-top: -1px;
+                    font-size: 20px;
+                }
+            }
+        }
+
         .botonchip-compra {
             display: flex;
             justify-content: flex-end;
