pagina historia con mediaQ

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -736,7 +736,7 @@
 
 } */
 
-.btn-boton-subir-foto {
+/* .btn-boton-subir-foto {
     margin: 10px;
     background-color: #2A3040;
     border-radius: 40px;
@@ -747,7 +747,7 @@
 .btn-boton-subir-foto:hover {
     background-color: #3F525A;
     color: #EAEBEB;
-}
+} */
 
 /* .linea-horizontal-formularios {
     margin-top: 30px;
