--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,7 +5,7 @@
 @import "./partials/tarjetas";
 @import "./partials/footer";
 @import "./partials/chatayuda";
-@import "./partials/empelo";
-@import "./partials/hisotira";
+@import "./partials/empleo";
+@import "./partials/historia";
 
 
