--- a/scss/partials/_empleo.scss
+++ b/scss/partials/_empleo.scss
@@ -5,12 +5,12 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left center;
-    position: relative;
     height: 200px;
     width: auto;
     background-image: url("../multimedia/img/banner-trabajo.png");
 
     @media (min-width: 550px) {
+        position: relative;
         height: 300px;
         width: 100%;
         align-items: center;
@@ -85,24 +85,77 @@
 
 .contenedor-formularios {
     margin-top: 200px;
-    display: flex;
+    display: block;
+    flex-direction: column;
     align-items: center;
+
+    @media (min-width: 550px) {
+        display: flex;
+        flex-direction: row;
+    }
+
+
+    &-foto {
+        display: block;
+        flex-direction: column;
+
+        @media (min-width: 550px) {
+            display: flex;
+            justify-content: center;
+        }
+
+        img {
+            width: 250px;
+            height: auto;
+            padding-top: 130px;
+            padding-left: 100px;
+            padding-bottom: 100px;
+
+            @media (min-width: 550px) {
+                padding-top: 0;
+                width: 300px;
+                height: auto;
+            }
+
+        }
+
+        .btn {
+            &-boton {
+                &-subir {
+                    margin: 10px;
+                    background-color: #2A3040;
+                    border-radius: 40px;
+                    color: #EAEBEB;
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+                    width: 200px;
+                    margin-left: 80px;
+                    margin-top: -150px;
+
+                    @media (min-width: 550px) {
+                        margin: 10px;
+                        background-color: #2A3040;
+                        border-radius: 40px;
+                        color: #EAEBEB;
+                        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
+                        width: 200px;
+                        margin-left: 100px;
+                        margin-top: -60px;
+                    }
+
+                    &:hover {
+                        background-color: #3F525A;
+                        color: #EAEBEB;
+                    }
+                }
+            }
+        }
+    }
 
     &-formularios {
         border: #2A3040 solid 1px;
         padding: 20px;
         border-radius: 12px;
 
-        &-foto {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            img {
-                width: 200px;
-                height: auto;
-            }
-        }
 
         .contenedor {
             &-formularios {
@@ -179,11 +232,13 @@
         font-size: 31px;
         margin-left: 30px;
         margin-right: 30px;
+        text-align: center;
 
         @media (min-width: 550px) {
             font-weight: 700;
             font-size: 50px;
             margin-right: 50px;
+            text-align: start;
         }
 
     }
@@ -192,10 +247,12 @@
         margin-left: 30px;
         margin-right: 30px;
         margin-bottom: 50px;
+        text-align: center;
 
         @media (min-width: 550px) {
             padding-top: 20px;
             margin-bottom: 20px;
+            text-align: start;
         }
     }
 }
@@ -207,25 +264,31 @@
             justify-content: space-between;
             padding-inline: 100px;
 
-            &-botones {
-                &-formularios {
-                    display: flex;
+            .botones {
+                &-formulario {
+                    display: block;
                     justify-content: center;
+                    width: auto;
+                    height: 50px;
+                    margin-left: 20px;
+                    margin-bottom: 50px;
+    
+                    @media (min-width: 550px){
+                        display: flex;
+                    }
 
-                    .btn {
-                        &-boton {
-                            &-subir {
-                                    background-color: #2A3040;
-                                    color: #EAEBEB;
-                                }
-
-                            &-enviar {
-                                background-color: #2A3040;
-                                color: #EAEBEB;
-                            }
+                    .boton {
+                        &-subir {
+                            background-color: #2A3040;
+                            color: #EAEBEB;
                         }
 
+                        &-enviar {
+                            background-color: #2A3040;
+                            color: #EAEBEB;
+                        }
                     }
+
                 }
             }
 
