--- a/scss/partials/_banners.scss
+++ b/scss/partials/_banners.scss
@@ -64,7 +64,7 @@
         background-position: left center;
         height: 200px;
         width: auto;
-        background-image: url(../../multimedia/img/banner-historia.png);
+        background-image: url(../multimedia/img/banner-historia.png);
         
 
         @media (min-width: 550px){
