--- a/scss/partials/_banners.scss
+++ b/scss/partials/_banners.scss
@@ -91,13 +91,13 @@
         align-items: center;
         width: 100%;
         background-color: #F06B5F;
-        padding-top: 12px;
+        padding-top: 9px;
 
         @media (min-width: 550px) {
             height: 40px;
         }
 
-        p {
+        h6 {
             text-transform: uppercase;
             font-weight: 400;
             background-color: transparent;
