--- a/scss/partials/_chatayuda.scss
+++ b/scss/partials/_chatayuda.scss
@@ -9,5 +9,9 @@
         margin-top: -30px;
         padding-bottom: 40px;
         margin-right: 40px;
+
+        &:hover{
+            
+        }
     }
 }
