--- a/scss/partials/_navegador.scss
+++ b/scss/partials/_navegador.scss
@@ -43,11 +43,16 @@
         @media (min-width:550px) {
             justify-content: center;
             display: flex;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
+
         &-lista {
             position: relative;
             top: 0;
-    
+
             @media (min-width:550px) {
                 font-weight: 600;
                 list-style-type: none;
@@ -63,41 +68,96 @@
                 flex-direction: row;
                 position: relative;
                 top: 0;
+
+                li {
+                    @media (min-width:550px) {
+                        padding: 10px;
+                        list-style-type: none;
+                        text-decoration: none;
+                    }
+
+                    a {
+                        @media (min-width:550px) {
+                            text-decoration: none;
+                            color: #EAEBEB;
+                            font-size: 18px;
+                            position: relative;
+                            display: block;
+                            text-transform: uppercase;
+                            margin: 20px 0;
+                            padding: 10px 20px;
+                            text-decoration: none;
+                            color: $colorblanco;
+                            font-family: $fontopensans;
+                            font-size: 18px;
+                            font-weight: 600;
+                            transition: .5s;
+                            z-index: 1;
+
+                            &:before {
+                                content: '';
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                border-top: 1px solid $colornaranja;
+                                border-bottom: 1px solid $colornaranja;
+                                transform: scaleY(2);
+                                opacity: 0;
+                                transition: .3s;
+                            }
+
+                            &:after {
+                                content: '';
+                                position: absolute;
+                                top: 2px;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                transform: scale(0);
+                                opacity: 0;
+                                transition: .3s;
+                                z-index: -1;
+                            }
+
+                            &:hover {
+                                color: #fff;
+
+                                &:before {
+                                    transform: scaleY(1);
+                                    opacity: 1;
+                                }
+
+                                &:after {
+                                    transform: scaleY(1);
+                                    opacity: 1;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
-    }
 
 
-    li {
-        @media (min-width:550px) {
-            padding: 10px;
-            list-style-type: none;
-            text-decoration: none;
+
+
+
+        &-contenedor {
+            @media (min-width:550px) {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
+
+        
     }
-
-    a {
-        @media (min-width:550px) {
-            text-decoration: none;
-            color: #EAEBEB;
-            font-size: 18px;
-        }
-    }
-
-
-    &-contenedor {
-        @media (min-width:550px) {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    }
-
     &-boton {
         &-icono {
             border-radius: 30px 30px 30px 30px;
             border-color: transparent;
-            background-color: $colorblanco;
             width: 32px;
             height: 32px;
             margin-right: 8px;
@@ -134,5 +194,4 @@
             }
         }
     }
-
 }
