--- a/scss/partials/_empleo.scss
+++ b/scss/partials/_empleo.scss
@@ -112,6 +112,7 @@
             padding-bottom: 100px;
 
             @media (min-width: 550px) {
+                margin-top: -100px;
                 padding-top: 0;
                 width: 300px;
                 height: auto;
@@ -277,8 +278,8 @@
 
                     .boton {
                         &-subir {
-                            background-color: #2A3040;
-                            color: #EAEBEB;
+                            background-color: $colornaranja;
+                            color: $colorblanco;
                         }
 
                         &-enviar {
