--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,10 +1,58 @@
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    height: 40px;
+    min-height: auto;
     background-color: #2A3040;
     position: absolute;
-    margin-top: 40px;
+    margin-top: 80px;
+    display: flex;
+    padding: 30px;
+    padding-left: 100px;
+    padding-left: 100px;
+
+    h6 {
+        color: $colorblanco;
+    }
+
+    .columna1 {
+        margin-right: 200px;
+
+        &-iconos {
+            &-redes {
+                display: block;
+                margin-top: 20px;
+
+                img {
+                    margin-bottom: 20px;
+                    width: 30px;
+                    height: 30px;
+                    margin-right: 10px;
+                }
+            }
+        }
+
+
+    }
+
+    .columna2 {
+        padding-top: 90px;
+        margin-left: 100px;
+        align-items: end;
+
+        &-iconos {
+            &-pago {
+                display: flex;
+
+                img {
+                    border-radius: 4px;
+                    margin-right: 10px;
+                    width: 32px;
+                    height: auto;
+
+                }
+
+            }
+
+        }
+
+    }
 }
