--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -529,7 +529,7 @@ footer .columna1-iconos-redes img {
 }
 footer .columna2 {
   padding-top: 90px;
-  margin-left: 100px;
+  margin-right: 100px;
   align-items: end;
 }
 footer .columna2-iconos-pago {
