--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -35,7 +35,7 @@ footer {
 
     .columna2 {
         padding-top: 90px;
-        margin-left: 100px;
+        margin-right: 100px;
         align-items: end;
 
         &-iconos {
