--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -440,10 +440,27 @@
     display: flex;
   }
 }
+.contenedor-tarjeta-receta .tarjeta-receta-icono {
+  display: block;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjeta-receta .tarjeta-receta-icono {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
 .contenedor-tarjeta-receta .tarjeta-receta-icono-play {
   position: absolute;
-  margin-top: 100px;
-  margin-left: 150px;
+  margin-left: 120px;
+  margin-top: 80px;
+}
+@media (min-width: 550px) {
+  .contenedor-tarjeta-receta .tarjeta-receta-icono-play {
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 140px;
+  }
 }
 .contenedor-tarjeta-receta .tarjeta-receta-imagen img {
   height: auto;
@@ -501,21 +518,35 @@
 }
 
 footer {
-  width: 100%;
-  min-height: auto;
   background-color: #2A3040;
-  position: absolute;
-  margin-top: 80px;
-  display: flex;
+  width: 100%;
+  height: auto;
   padding: 30px;
-  padding-left: 100px;
-  padding-left: 100px;
+  padding-left: 30px;
+  padding-left: 30px;
+}
+@media (min-width: 550px) {
+  footer {
+    display: flex;
+    padding: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
 }
 footer h6 {
   color: #EAEBEB;
+  font-size: 15px;
 }
-footer .columna1 {
-  margin-right: 200px;
+@media (min-width: 550px) {
+  footer .columna1 {
+    margin-right: 200px;
+  }
+}
+@media (min-width: 550px) {
+  footer .columna1-iconos {
+    display: block;
+    justify-content: end;
+  }
 }
 footer .columna1-iconos-redes {
   display: block;
@@ -528,9 +559,14 @@ footer .columna1-iconos-redes img {
   margin-right: 10px;
 }
 footer .columna2 {
-  padding-top: 90px;
-  margin-right: 100px;
-  align-items: end;
+  padding-top: 20px;
+}
+@media (min-width: 550px) {
+  footer .columna2 {
+    padding-top: 90px;
+    margin-right: 100px;
+    align-items: end;
+  }
 }
 footer .columna2-iconos-pago {
   display: flex;
@@ -545,14 +581,17 @@ footer .columna2-iconos-pago img {
 .chat-ayuda {
   display: flex;
   justify-content: end;
-  margin-top: 50px;
 }
 .chat-ayuda img {
   width: 200px;
   height: auto;
-  margin-top: -30px;
-  padding-bottom: 40px;
-  margin-right: 40px;
+  margin-bottom: 40px;
+}
+@media (min-width: 550px) {
+  .chat-ayuda img {
+    margin-top: -30px;
+    margin-right: 40px;
+  }
 }
 
 .banner-empleo {
@@ -707,7 +746,6 @@ footer .columna2-iconos-pago img {
   display: block;
   width: 60px;
   height: auto;
-  margin: 200px;
 }
 @media (min-width: 550px) {
   .contenedor-formularios-formularios .contenedor-formularios-foto {
@@ -743,7 +781,7 @@ footer .columna2-iconos-pago img {
     display: flex;
     justify-content: center;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
   }
 }
 .nos-encanta .titulo-trabajo {
@@ -764,7 +802,7 @@ footer .columna2-iconos-pago img {
 .nos-encanta .texto-trabajo {
   margin-left: 30px;
   margin-right: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   text-align: center;
 }
 @media (min-width: 550px) {
