--- a/scss/partials/_chatayuda.scss
+++ b/scss/partials/_chatayuda.scss
@@ -1,14 +1,22 @@
 .chat-ayuda {
     display: flex;
     justify-content: end;
-    margin-top: 50px;
+    @media (min-width: 550px){
+        
+        // margin-top: 50px;
+    }
 
     img{
         width: 200px;
         height: auto;
-        margin-top: -30px;
-        padding-bottom: 40px;
-        margin-right: 40px;
+        margin-bottom: 40px;
+        
+        @media (min-width: 550px){
+            margin-top: -30px;
+            margin-right: 40px;
+            
+            
+        }
 
     }
 }
